--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,5 +13,6 @@
         "sourceType": "module"
     },
     "rules": {
+        "semi": ["error", "always", { "omitLastInOneLineBlock": true}]
     }
 }
